# adaptive-learning-agent

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
authoring/aws-sap-c02-org-04/: project.json
authoring/aws-sap-c02-org-04-baseline-b/: project.json  research-log.md
docs/: ai-independent-verification.md  amateur-extra-asset-pilot-0.2b.md  amateur-extra-asset-pilot-plan.md  amateur-extra-pilot-0.2.md  architecture.md  assessment-research-policy.md  asset-accessibility-policy.md  asset-pack-format-proposal.md  authoring-first-pass-quality-protocol.md  aws-sap-c02-pilot-plan.md  capability-discovery.md  current-status.md  curriculum-planning.md  evidence-policy.md  hermes-compatibility-0.18.2.md  hermes-integration.md  mvp-requirements.md  mvp-vertical-slice.md  pack-format-0.2-proposal.md  pack-format.md  product-principles.md  project-context.md  repository-tree.md  rights-policy.md  roadmap.md  sqlite-schema.md  subject-builder-architecture.md  test-plan.md  tool-contract.md  vision.md
docs/releases/: 0.1.0.md  (+3 more)
packs/: README.md
schemas/: README.md
skills/: README.md
tests/: README.md  authoring_helpers.py  test_authoring_infrastructure.py  test_e1a_approved_workflow.py  test_e1a_golden.py  test_e7b_golden.py  test_hermes_plugin.py  test_independent_verification.py  test_pack_validation.py  test_pack_validation_v02.py  test_pack_validation_v03.py  test_storage.py  test_vertical_slice.py  v03_helpers.py
user-data/: .gitignore
(+670 files in other folders)
