[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-learning-agent"
version = "0.2.0a1"
description = "A lightweight, local-first, agent-native adaptive learning system with portable subject packs and evidence-aware assessment."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Adaptive Learning Agent contributors" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/amcclure1/adaptive-learning-agent/tree/main/docs"
Issues = "https://github.com/amcclure1/adaptive-learning-agent/issues"
Repository = "https://github.com/amcclure1/adaptive-learning-agent"

[tool.setuptools.packages.find]
where = ["src"]
